02-orquestacion/exercises/exercise2/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-front
spec:
  rules:
  - host: "lc-todo.jtrillo"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-front
            port:
              number: 80
